--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,12 @@ services:
     buildCommand: npm install && npm run build
     startCommand: npm start
     envVars:
+      - key: NODE_ENV
+        value: production
       - key: NODE_VERSION
         value: 16
+      - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
+        value: true
     buildFilter:
       paths:
         - src/**
@@ -17,9 +21,8 @@ services:
         - server.js
     preDeployCommand: |
       apt-get update
-      apt-get install -y wget gnupg ca-certificates procps libxss1 libasound2
-      wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
-      sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-      apt-get update
-      apt-get install -y google-chrome-stable
-      rm -rf /var/lib/apt/lists/* 
+      apt-get install -y ca-certificates fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgbm1 libgcc1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release wget xdg-utils
+      wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+      apt-get install -y ./google-chrome-stable_current_amd64.deb
+      rm google-chrome-stable_current_amd64.deb
+      echo "Chrome version: $(google-chrome --version)" 
