--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,31 @@
 services:
   - type: web
-    name: ttshop-tool
+    name: ttshop-scraper
     env: node
-    buildCommand: npm install && npm run build
+    buildCommand: >
+      apt-get update && 
+      apt-get install -y wget gnupg && 
+      wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && 
+      echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list && 
+      apt-get update && 
+      apt-get install -y google-chrome-stable && 
+      google-chrome --version && 
+      npm install && 
+      npm run build
     startCommand: npm start
+    healthCheckPath: /
+    autoDeploy: false
     envVars:
       - key: NODE_ENV
         value: production
-      - key: NODE_VERSION
-        value: 16
       - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
-        value: true
+        value: "true"
+      - key: PUPPETEER_EXECUTABLE_PATH
+        value: "/usr/bin/google-chrome-stable"
+    disk:
+      name: chrome-data
+      mountPath: /tmp
+      sizeGB: 1
     buildFilter:
       paths:
         - src/**
