--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: ttshop-scraper
     env: node
+    plan: starter
     buildCommand: >
       apt-get update && 
       apt-get install -y wget gnupg ca-certificates fonts-liberation libasound2 libatk-bridge2.0-0 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgbm1 libgcc1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release xdg-utils &&
@@ -14,8 +15,10 @@ services:
       npm install && 
       npm run build
     startCommand: npm start
-    healthCheckPath: /
+    healthCheckPath: /health
+    healthCheckTimeout: 60
     autoDeploy: false
+    numInstances: 1
     envVars:
       - key: NODE_ENV
         value: production
@@ -23,6 +26,8 @@ services:
         value: "true"
       - key: PUPPETEER_EXECUTABLE_PATH
         value: "/usr/bin/google-chrome-stable"
+      - key: NODE_OPTIONS
+        value: "--max-old-space-size=512"
     disk:
       name: chrome-data
       mountPath: /tmp
@@ -35,10 +40,13 @@ services:
         - vite.config.ts
         - tsconfig.json
         - server.js
+        - render.yaml
     preDeployCommand: |
       apt-get update
       apt-get install -y ca-certificates fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgbm1 libgcc1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release wget xdg-utils
       wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
       apt-get install -y ./google-chrome-stable_current_amd64.deb
       rm google-chrome-stable_current_amd64.deb
+      mkdir -p /tmp/chrome-user-data
+      chmod 777 /tmp/chrome-user-data
       echo "Chrome version: $(google-chrome --version)" 
